# quickviewer

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  HowToBuild.md  LICENSE  QVproject.pri  QVproject.pro  README.md  README_jp.md  deploy.bat
.github/: FUNDING.yml
AssociateFilesWithQuickViewer/: AssociateFilesWithQuickViewer.exe.manifest  AssociateFilesWithQuickViewer.pro  fileassocdialog.cpp  fileassocdialog.h  fileassocdialog.ui  main.cpp  resources.qrc
Qt7z/: .travis.yml  CMakeLists.txt
Qt7z/Qt7z/: 7zip.cmake  7zip_CPP_Windows_FileIO.cpp.patch  CMakeLists.txt  Qt7z.pri  Qt7z.pro  p7zip.cmake  qt7z.pri  qt7z.pro  qt7z_global.h  qt7zfileinfo.cpp  qt7zfileinfo.h  qt7zpackage.cpp  qt7zpackage.h  qt7zpackage_p.h
Qt7z/Qt7z/7zip/C/: 7zCrc.c  7zTypes.h  7zVersion.h  Alloc.c  CpuArch.h  LzFind.c  LzFind.h  LzFindMt.c  Lzma2Enc.c  Lzma2Enc.h  LzmaEnc.c  LzmaEnc.h  MtCoder.c  MtCoder.h  Xz.c  Xz.h  XzCrc64.c  XzCrc64Opt.c  XzDec.c  XzEnc.c  XzIn.c
Qt7z/Qt7z/7zip/C/Util/7z/: 7zMain.c
Qt7z/Qt7z/7zip/C/Util/Lzma/: LzmaUtil.c
Qt7z/Qt7z/7zip/C/Util/SfxSetup/: SfxSetup.c
Qt7z/Qt7z/7zip/CPP/: Build.mak
Qt7z/Qt7z/7zip/CPP/7zip/: Aes.mak  Crc.mak  Crc64.mak  Guid.txt  ICoder.h
Qt7z/Qt7z/7zip/CPP/7zip/Archive/: XzHandler.cpp
Qt7z/Qt7z/7zip/CPP/7zip/Archive/7z/: 7zEncode.cpp  7zOut.cpp  7zRegister.cpp  7zUpdate.cpp
Qt7z/Qt7z/7zip/CPP/7zip/Archive/Zip/: ZipAddCommon.cpp  ZipAddCommon.h  ZipHandler.cpp  ZipHandlerOut.cpp  ZipIn.cpp  ZipItem.cpp  ZipOut.cpp  ZipRegister.cpp  ZipUpdate.cpp
Qt7z/Qt7z/7zip/CPP/7zip/Bundles/Alone7z/: Alone.dsp  makefile
Qt7z/Qt7z/7zip/CPP/7zip/Common/: CWrappers.cpp  MethodProps.cpp  MethodProps.h  RegisterArc.h
Qt7z/Qt7z/7zip/CPP/7zip/Compress/: BranchRegister.cpp  Deflate64Register.cpp  Lzma2Encoder.cpp  LzmaEncoder.cpp  PpmdRegister.cpp  ShrinkDecoder.cpp  XzDecoder.cpp  XzDecoder.h  XzEncoder.cpp  XzEncoder.h
Qt7z/Qt7z/7zip/CPP/7zip/Crypto/: MyAesReg.cpp
Qt7z/Qt7z/7zip/CPP/7zip/UI/Client7z/: Client7z.cpp
Qt7z/Qt7z/7zip/CPP/7zip/UI/Common/: ArchiveCommandLine.cpp  ArchiveCommandLine.h  ArchiveExtractCallback.cpp  ArchiveExtractCallback.h  ArchiveName.cpp  Bench.cpp  Bench.h  DirItem.h  EnumDirItems.cpp  Extract.cpp  ExtractingFilePath.cpp  HashCalc.cpp  OpenArchive.cpp  PropIDUtils.cpp  Update.cpp  UpdateCallback.cpp  UpdateCallback.h
Qt7z/Qt7z/7zip/CPP/7zip/UI/Console/: ExtractCallbackConsole.cpp  HashCon.cpp  List.cpp  Main.cpp  UpdateCallbackConsole.cpp  resource.rc
Qt7z/Qt7z/7zip/CPP/7zip/UI/FileManager/: ExtractCallback.cpp  ProgressDialog2.cpp
Qt7z/Qt7z/7zip/CPP/7zip/UI/GUI/: ExtractGUI.cpp
Qt7z/Qt7z/7zip/CPP/Common/: CRC.cpp  ListFileUtils.cpp  MyString.h  MyWindows.h  StdAfx.h  StdOutStream.cpp
Qt7z/Qt7z/7zip/CPP/Windows/: FileDir.cpp  FileIO.cpp  FileLink.cpp
Qt7z/Qt7z/7zip/DOC/: Methods.txt  lzma-history.txt  lzma-sdk.txt
Qt7z/Qt7z/7zip/Patches/: 0001-Add-Static-Force-Link.patch
Qt7z/Qt7z/p7zip/CPP/7zip/Archive/Zip/: ZipRegister.cpp
Qt7z/Qt7z/p7zip/CPP/7zip/Common/: RegisterCodec.h
Qt7z/Qt7z/p7zip/CPP/7zip/Compress/: Bcj2Register.cpp  BcjRegister.cpp  CopyRegister.cpp  DeflateRegister.cpp  Lzma2Register.cpp  LzmaRegister.cpp
Qt7z/Qt7z/p7zip/CPP/7zip/Crypto/: 7zAesRegister.cpp
Qt7z/Qt7z/p7zip/CPP/7zip/UI/Common/: LoadCodecs.cpp
Qt7z/Qt7z/p7zip/CPP/Common/: MyWindows.cpp
Qt7z/Qt7z/p7zip/CPP/Windows/: PropVariant.cpp
Qt7z/Qt7z/p7zip/DOC/: License.txt
Qt7z/Qt7z/p7zip/Patches/: 0001-Add-Static-Force-Link.patch
Qt7z/Qt7zTest/: CMakeLists.txt  Qt7zPackage_Tests.cpp  Qt7zTest.pro  Qt7zTest.qrc  Qt7zTestMain.cpp
Qt7z/Qt7zTest/assets/: image.7z  mixed.7z  password-filename.7z  password.7z  text.7z
Qt7z/lib7z/: lib7z.pro
QuickCatalog/: QuickCatalog.pro  cataloglist.ui  catalogwindow.cpp  catalogwindow.h  catalogwindow.ui  createdb.ui  databasesettingdialog.cpp  databasesettingdialog.h  fileexplorer.cpp  fileexplorer.h  fileexplorermodel.h  main.cpp  managedatabasedialog.cpp  managedatabasedialog.h  qc_init.h  thumbnailmanager.cpp  thumbnailmanager.h
QuickCatalog/database/: recreatedb.bat  schema.sql  thumbail.sqlite3.db  thumbnail.sqlite3.db
QuickViewer/: AppRun  Info.plist  Install.nsi  QuickViewer.desktop  QuickViewer.pro  concurrentimage.cpp  concurrentimage.h  exifdialog.cpp  exifdialog.h  fileloader.cpp  fileloader.h  fileloader7zarchive.cpp  fileloader7zarchive.h  fileloaderdirectory.cpp  fileloaderdirectory.h  fileloaderrararchive.cpp  fileloaderrararchive.h  fileloaderziparchive.cpp  fileloaderziparchive.h  filevolume.cpp  filevolume.h  filevolume7zarchive.cpp  filevolume7zarchive.h  filevolumedirectory.cpp  filevolumedirectory.h  filevolumeziparchive.cpp  filevolumeziparchive.h  imageshadereffect.cpp  imageshadereffect.h  imageview.cpp  imageview.h  keyconfigdialog.cpp  keyconfigdialog.h  keyconfigdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowforwindows.cpp  mainwindowforwindows.h  (+23 more)
QuickViewer/catalog/: cataloglist.ui  catalogwindow.cpp  catalogwindow.h  catalogwindow.ui  databasesettingdialog.cpp  fileexplorermodel.cpp  managedatabasedialog.cpp  qc_init.h  thumbnailmanager.cpp  thumbnailmanager.h  (+2 more)
ResizeHalf/: resizehalf.pro
docs/: CONTRIBUTING.md  _config.yml  index-ja.md  index.md  jekyll-theme-merlot.gemspec  privacypolicy.md  shader-ja.md  shader.md  terms_of_service.md
easyexif/: easyexif.pro  exif.cpp.patch
fileloader/: fileloader.cpp  fileloader.h  fileloader.pro  fileloader7zarchive.cpp  fileloader7zarchive.h  fileloaderdirectory.cpp  fileloaderdirectory.h  fileloaderrararchive.cpp  fileloaderrararchive.h  fileloadersubdirectory.cpp  fileloadersubdirectory.h  fileloaderziparchive.cpp  fileloaderziparchive.h
luminor/: luminor.pro  qluminor.cpp  qluminor.h
qsvgrenderer/: qsvgrenderer.pro
quazip/: quazip.pro
qvtest/: qvtest.pro  tst_fileloadertest.cpp
unrar/: UNRAR_VERSION.txt  rarextractor.cpp  rarextractor.h  unrar.pri  unrar.pro  unrar_file.cpp.patch
zimg/: StdAfx.h  qzimg.cpp  qzimg.h  zimg.pro
zlib/: zlib.pro
(+160 files in other folders)
